security: update Next.js to patch CVE-2025-66478 vulnerability
- Update Next.js 16.0.3 -> 16.0.8 in main-hub, cv, portfolio, nexastore, ui
- Update Next.js 14.2.18 -> 14.2.29 in lab

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "turbo": "latest",
-    "prettier": "^3.0.0"
+    "@playwright/test": "^1.57.0",
+    "prettier": "^3.0.0",
+    "turbo": "latest"
   },
   "prettier": "@geekslab/config/prettier-preset.js",
   "workspaces": [
