--- a/apps/lab/package.json
+++ b/apps/lab/package.json
@@ -14,7 +14,7 @@
     "animejs": "^3.2.2",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
-    "next": "14.2.18",
+    "next": "^14.2.29",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "three": "^0.169.0",
