--- a/apps/main-hub/package.json
+++ b/apps/main-hub/package.json
@@ -28,7 +28,7 @@
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
