--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -9,25 +9,25 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@geekslab/ui": "*",
         "@geekslab/types": "*",
-        "react": "19.2.0",
-        "react-dom": "19.2.0",
-        "next": "16.0.3",
+        "@geekslab/ui": "*",
+        "clsx": "^2.1.1",
         "framer-motion": "^12.23.24",
         "lucide-react": "^0.554.0",
-        "clsx": "^2.1.1",
+        "next": "^16.0.8",
+        "react": "19.2.0",
+        "react-dom": "19.2.0",
         "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@geekslab/config": "*",
         "@tailwindcss/postcss": "^4",
-        "typescript": "^5",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "tailwindcss": "^4",
         "eslint": "^9",
-        "eslint-config-next": "16.0.3"
+        "eslint-config-next": "16.0.3",
+        "tailwindcss": "^4",
+        "typescript": "^5"
     }
 }
